--- a/tharsh/bookapp/static/book.html
+++ b/tharsh/bookapp/static/book.html
@@ -61,11 +61,10 @@
     </head>
     <body bgcolor="grey">
       <div class="image-container">
-        <img src="book cover 2.jpeg" alt="Image" height="50px" width="50px">
-        <div class="centered-text"><h2><br><br><br>Harry Potter<HR><H3>To Unravel The Mystery</H3></h2></div>
+        <img src="tharsh/bookapp/static/sec.jpeg" alt="Image" height="50px" width="50px">
+        <div class="centered-text"><h2><br><br><br>Achieve Success with SEC<HR><H3>SEC</H3></h2></div>
       </div> <BR><br><br><br>
-        <div class="centered-text2"><h3>J K ROWLING</h3><HR><H4>CREATED BY THARSHINI.M</H4></div>
-        <div class="centered-text4"><img src="mypic.jpg" width="130px" height="130px"></div>
+        <div class="centered-text2"><h3>An SECian Alumni perpective</h3><HR><H4>CREATED BY THARSHINI.M</H4></div>
     </body>
     </html>
     
